// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Individual Defendant Guardian Component should clear guardian form when remove button is clicked 1`] = `
<individual-defendant-guardian-test
  manualCaseDefendant={[Function Object]}
  manualCaseType={[Function String]}
>
  <form
    class="ng-untouched ng-dirty ng-invalid"
    novalidate=""
    pdk-form=""
  >
    <individual-defendant-guardian>
      <div
        class="govuk-!-margin-top-3 govuk-!-margin-bottom-3"
        pdk-margin-bottom="3"
        pdk-margin-top="3"
      >
        <a
          class="govuk-link"
          href="javascript:void(0);"
          pdk-link=""
        >
          MANUAL_CASE_DEFENDANT.GUARDIAN_PANEL
        </a>
      </div>
    </individual-defendant-guardian>
  </form>
</individual-defendant-guardian-test>
`;

exports[`Individual Defendant Guardian Component should copy defendant address to individual-guardian-address 1`] = `
<individual-defendant-guardian-test
  manualCaseDefendant={[Function Object]}
  manualCaseType={[Function String]}
>
  <form
    class="ng-untouched ng-dirty ng-invalid"
    novalidate=""
    pdk-form=""
  >
    <individual-defendant-guardian>
      <div
        class="govuk-!-margin-top-3 govuk-!-margin-bottom-3"
        pdk-margin-bottom="3"
        pdk-margin-top="3"
      >
        <a
          class="govuk-link"
          href="javascript:void(0);"
          pdk-link=""
        >
          MANUAL_CASE_DEFENDANT.GUARDIAN_PANEL
        </a>
      </div>
      <pdk-inset-text
        class="pl-m"
        size="narrow"
      >
        <div
          class="govuk-inset-text"
        >
          <pdk-grid
            class="govuk-!-margin-bottom-3 govuk-!-padding-left-3 govuk-grid-row ng-untouched ng-dirty ng-invalid"
            container=""
            ngmodelgroup="individual"
            pdk-margin-bottom="3"
            pdk-padding-left="3"
          >
            <pdk-form-field
              labeltype="small"
            >
              <pdk-form-group
                class="pdk-form-group"
              >
                <fieldset
                  class="govuk-fieldset"
                  pdk-fieldset=""
                >
                  <legend
                    class="govuk-fieldset__legend govuk-fieldset__legend--s"
                  >
                     MANUAL_CASE_DEFENDANT.GUARDIAN_TYPE 
                  </legend>
                  <pdk-radio-group
                    class="ng-untouched ng-pristine ng-valid"
                    data-role="other-type-input"
                    name="guardianType"
                  >
                    <div
                      class="govuk-radios govuk-radios--inline"
                    >
                      <pdk-radio-button
                        value="INDIVIDUAL"
                      >
                        <div
                          class="govuk-radios__item"
                        >
                          <input
                            class="govuk-radios__input"
                            id="pdk-radio-GENERATED_ID"
                            name="pdk-radio-group-GENERATED_ID"
                            type="radio"
                            value="INDIVIDUAL"
                          />
                          <label
                            class="govuk-radios__label govuk-label"
                            for="pdk-radio-GENERATED_ID"
                            pdk-label=""
                          >
                             APPLICANT_DETAILS.INDIVIDUAL 
                          </label>
                        </div>
                      </pdk-radio-button>
                      <pdk-radio-button
                        value="ORGANISATION"
                      >
                        <div
                          class="govuk-radios__item"
                        >
                          <input
                            class="govuk-radios__input"
                            id="pdk-radio-GENERATED_ID"
                            name="pdk-radio-group-GENERATED_ID"
                            type="radio"
                            value="ORGANISATION"
                          />
                          <label
                            class="govuk-radios__label govuk-label"
                            for="pdk-radio-GENERATED_ID"
                            pdk-label=""
                          >
                             APPLICANT_DETAILS.ORGANISATION 
                          </label>
                        </div>
                      </pdk-radio-button>
                    </div>
                  </pdk-radio-group>
                </fieldset>
              </pdk-form-group>
            </pdk-form-field>
            <div
              class="ng-untouched ng-dirty ng-invalid"
              ngmodelgroup="individual"
            >
              <div
                class="ng-untouched ng-dirty ng-invalid"
                ngmodelgroup="parentGuardianInformation"
              >
                <div
                  class="ng-untouched ng-dirty ng-invalid"
                  ngmodelgroup="personalInformation"
                >
                  <pdk-form-field
                    labeltype="small"
                  >
                    <pdk-form-group
                      class="pdk-form-group"
                    >
                      <label
                        class="govuk-label govuk-label--s"
                        for="pdk-form-control-undefined-GENERATED_ID"
                      >
                         MANUAL_CASE_DEFENDANT.TITLE 
                      </label>
                      <input
                        class="ng-untouched ng-pristine govuk-input ng-invalid"
                        id="pdk-form-control-undefined-GENERATED_ID"
                        maxlength="35"
                        name="title"
                        pdk-input=""
                        pdk-text-input=""
                        required=""
                        type="text"
                      />
                    </pdk-form-group>
                  </pdk-form-field>
                  <pdk-form-field
                    labeltype="small"
                  >
                    <pdk-form-group
                      class="pdk-form-group"
                    >
                      <label
                        class="govuk-label govuk-label--s"
                        for="pdk-form-control-undefined-GENERATED_ID"
                      >
                         MANUAL_CASE_DEFENDANT.FORENAME 
                      </label>
                      <input
                        class="ng-untouched ng-pristine govuk-input ng-invalid"
                        data-role="forename-input"
                        id="pdk-form-control-undefined-GENERATED_ID"
                        maxlength="35"
                        name="firstName"
                        pdk-input=""
                        pdk-text-input=""
                        required=""
                        type="text"
                      />
                    </pdk-form-group>
                  </pdk-form-field>
                  <pdk-form-field
                    labeltype="small"
                  >
                    <pdk-form-group
                      class="pdk-form-group"
                    >
                      <label
                        class="govuk-label govuk-label--s"
                        for="pdk-form-control-undefined-GENERATED_ID"
                      >
                         MANUAL_CASE_DEFENDANT.MIDDLENAME 
                      </label>
                      <input
                        class="ng-untouched ng-pristine ng-valid govuk-input"
                        data-role="middlename-input"
                        id="pdk-form-control-undefined-GENERATED_ID"
                        maxlength="35"
                        name="givenName2"
                        pdk-input=""
                        pdk-text-input=""
                        type="text"
                      />
                    </pdk-form-group>
                  </pdk-form-field>
                  <pdk-form-field
                    labeltype="small"
                  >
                    <pdk-form-group
                      class="pdk-form-group"
                    >
                      <label
                        class="govuk-label govuk-label--s"
                        for="pdk-form-control-undefined-GENERATED_ID"
                      >
                         MANUAL_CASE_DEFENDANT.SURNAME 
                      </label>
                      <input
                        class="ng-untouched ng-pristine ng-valid govuk-input"
                        data-role="surname-input"
                        id="pdk-form-control-undefined-GENERATED_ID"
                        maxlength="35"
                        name="lastName"
                        pdk-input=""
                        pdk-text-input=""
                        required=""
                        type="text"
                      />
                    </pdk-form-group>
                  </pdk-form-field>
                  <h2
                    class="bold govuk-!-margin-bottom-3 govuk-body-m"
                    pdk-margin-bottom="3"
                    pdk-typography="body-medium"
                  >
                     MANUAL_CASE_DEFENDANT.GUARDIAN_ADDRESS 
                  </h2>
                  <p>
                    <a
                      class="govuk-link"
                      data-role="same-as-individual-defendant"
                      href="javascript:void(0);"
                      pdk-link=""
                    >
                      MANUAL_CASE_DEFENDANT.SAME_AS_DEFENDANT
                    </a>
                  </p>
                  <pdk-form-field
                    class="govuk-!-margin-bottom-3"
                    labeltype="small"
                    pdk-margin-bottom="3"
                  >
                    <pdk-form-group
                      class="pdk-form-group"
                    >
                      <fieldset
                        class="govuk-fieldset"
                        pdk-fieldset=""
                      >
                        <legend
                          class="govuk-fieldset__legend govuk-fieldset__legend--s"
                        >
                           MANUAL_CASE_DEFENDANT.ADDRESS 
                        </legend>
                        <input-address
                          class="ng-untouched ng-dirty ng-invalid"
                          data-role="address-input"
                          name="address"
                        >
                          <pdk-form-field>
                            <pdk-form-group
                              class="pdk-form-group"
                            >
                              <pdk-checkbox
                                class="govuk-!-margin-bottom-2 govuk-checkboxes ng-untouched ng-pristine ng-valid"
                                data-role="no-fixed-abode"
                                name="noFixedAbode"
                                pdk-margin-bottom="2"
                              >
                                <div
                                  class="govuk-checkboxes__item"
                                >
                                  <input
                                    class="govuk-checkboxes__input"
                                    id="pdk-checkbox-GENERATED_ID"
                                    name="noFixedAbode"
                                    type="checkbox"
                                    value="true"
                                  />
                                  <label
                                    class="govuk-label govuk-checkboxes__label"
                                    for="pdk-checkbox-GENERATED_ID"
                                  >
                                     No fixed abode 
                                  </label>
                                </div>
                              </pdk-checkbox>
                            </pdk-form-group>
                          </pdk-form-field>
                          <div
                            class="govuk-!-margin-bottom-6 ng-untouched ng-pristine ng-invalid"
                            pdk-margin-bottom="6"
                          >
                            <pdk-form-group
                              class="pdk-form-group"
                            >
                              <label
                                class="govuk-!-margin-top-6 govuk-label govuk-label--s"
                                for="address-control-undefined-GENERATED_ID-address1"
                                pdk-label="small"
                                pdk-margin-top="6"
                              >
                                 Address line 1 
                              </label>
                              <input
                                class="form-control govuk-input ng-untouched ng-pristine ng-invalid"
                                id="address-control-undefined-GENERATED_ID-address1"
                                maxlength="35"
                                name="address1"
                                pdk-input=""
                                pdk-text-input=""
                                required=""
                                type="text"
                              />
                            </pdk-form-group>
                            <pdk-form-group
                              class="pdk-form-group"
                            >
                              <label
                                class="govuk-!-margin-top-6 govuk-label govuk-label--s"
                                for="address-control-undefined-GENERATED_ID-address2"
                                pdk-label="small"
                                pdk-margin-top="6"
                              >
                                 Address line 2 (optional) 
                              </label>
                              <input
                                class="form-control govuk-input ng-untouched ng-pristine ng-invalid"
                                id="address-control-undefined-GENERATED_ID-address2"
                                maxlength="35"
                                name="address2"
                                pdk-input=""
                                pdk-text-input=""
                                required=""
                                type="text"
                              />
                            </pdk-form-group>
                            <pdk-form-group
                              class="pdk-form-group"
                            >
                              <label
                                class="govuk-!-margin-top-6 govuk-label govuk-label--s"
                                for="address-control-undefined-GENERATED_ID-address3"
                                pdk-label="small"
                                pdk-margin-top="6"
                              >
                                 Address line 3 (optional) 
                              </label>
                              <input
                                class="form-control govuk-input ng-untouched ng-pristine ng-invalid"
                                id="address-control-undefined-GENERATED_ID-address3"
                                maxlength="35"
                                name="address3"
                                pdk-input=""
                                pdk-text-input=""
                                required=""
                                type="text"
                              />
                            </pdk-form-group>
                            <pdk-form-group
                              class="pdk-form-group"
                            >
                              <label
                                class="govuk-!-margin-top-6 govuk-label govuk-label--s"
                                for="address-control-undefined-GENERATED_ID-address4"
                                pdk-label="small"
                                pdk-margin-top="6"
                              >
                                 Address line 4 (optional) 
                              </label>
                              <input
                                class="form-control govuk-input ng-untouched ng-pristine ng-invalid"
                                id="address-control-undefined-GENERATED_ID-address4"
                                maxlength="35"
                                name="address4"
                                pdk-input=""
                                pdk-text-input=""
                                required=""
                                type="text"
                              />
                            </pdk-form-group>
                            <pdk-form-group
                              class="pdk-form-group"
                            >
                              <label
                                class="govuk-!-margin-top-6 govuk-label govuk-label--s"
                                for="address-control-undefined-GENERATED_ID-address5"
                                pdk-label="small"
                                pdk-margin-top="6"
                              >
                                 Address line 5 (optional) 
                              </label>
                              <input
                                class="form-control govuk-input ng-untouched ng-pristine ng-invalid"
                                id="address-control-undefined-GENERATED_ID-address5"
                                maxlength="35"
                                name="address5"
                                pdk-input=""
                                pdk-text-input=""
                                required=""
                                type="text"
                              />
                            </pdk-form-group>
                            <pdk-form-group
                              class="pdk-form-group"
                            >
                              <label
                                class="govuk-!-margin-top-6 govuk-label govuk-label--s"
                                for="address-control-undefined-GENERATED_ID-postcode"
                                pdk-label="small"
                                pdk-margin-top="6"
                              >
                                 Postcode 
                              </label>
                              <input
                                class="form-control govuk-input ng-untouched ng-pristine ng-invalid"
                                id="address-control-undefined-GENERATED_ID-postcode"
                                maxlength="8"
                                name="postcode"
                                pdk-input=""
                                pdk-text-input=""
                                required=""
                                type="text"
                              />
                            </pdk-form-group>
                          </div>
                        </input-address>
                      </fieldset>
                    </pdk-form-group>
                  </pdk-form-field>
                  <h2
                    class="bold govuk-!-margin-bottom-3 govuk-body-m"
                    pdk-margin-bottom="3"
                    pdk-typography="body-medium"
                  >
                     MANUAL_CASE_DEFENDANT.GUARDIAN_CONTACT_DETAILS 
                  </h2>
                  <div
                    class="ng-untouched ng-pristine ng-valid"
                    ngmodelgroup="contactDetails"
                  >
                    <pdk-form-field>
                      <pdk-form-group
                        class="pdk-form-group"
                      >
                        <label
                          class="govuk-label"
                          for="pdk-form-control-undefined-GENERATED_ID"
                        >
                           MANUAL_CASE_DEFENDANT.EMAIL 
                        </label>
                        <input
                          class="ng-untouched ng-pristine ng-valid govuk-input"
                          id="pdk-form-control-undefined-GENERATED_ID"
                          maxlength="255"
                          name="primaryEmail"
                          pdk-input=""
                          pdk-text-input=""
                          type="email"
                          validateemail=""
                        />
                      </pdk-form-group>
                    </pdk-form-field>
                    <pdk-form-field>
                      <pdk-form-group
                        class="pdk-form-group"
                      >
                        <label
                          class="govuk-label"
                          for="pdk-form-control-undefined-GENERATED_ID"
                        >
                           MANUAL_CASE_DEFENDANT.PHONE 
                        </label>
                        <input
                          class="ng-untouched ng-pristine ng-valid govuk-input"
                          id="pdk-form-control-undefined-GENERATED_ID"
                          maxlength="20"
                          name="work"
                          pdk-input=""
                          pdk-text-input=""
                          type="tel"
                          validatephone=""
                        />
                      </pdk-form-group>
                    </pdk-form-field>
                  </div>
                </div>
              </div>
            </div>
            <p>
              <a
                class="govuk-link"
                data-role="remove-guardian-link"
                href="javascript:void(0);"
                pdk-link=""
              >
                MANUAL_CASE_DEFENDANT.GUARDIAN_REMOVE_LINK
              </a>
            </p>
          </pdk-grid>
        </div>
      </pdk-inset-text>
    </individual-defendant-guardian>
  </form>
</individual-defendant-guardian-test>
`;

exports[`Individual Defendant Guardian Component should copy defendant address to organisation-guardian-address 1`] = `
<individual-defendant-guardian-test
  manualCaseDefendant={[Function Object]}
  manualCaseType={[Function String]}
>
  <form
    class="ng-untouched ng-dirty ng-invalid"
    novalidate=""
    pdk-form=""
  >
    <individual-defendant-guardian>
      <div
        class="govuk-!-margin-top-3 govuk-!-margin-bottom-3"
        pdk-margin-bottom="3"
        pdk-margin-top="3"
      >
        <a
          class="govuk-link"
          href="javascript:void(0);"
          pdk-link=""
        >
          MANUAL_CASE_DEFENDANT.GUARDIAN_PANEL
        </a>
      </div>
      <pdk-inset-text
        class="pl-m"
        size="narrow"
      >
        <div
          class="govuk-inset-text"
        >
          <pdk-grid
            class="govuk-!-margin-bottom-3 govuk-!-padding-left-3 govuk-grid-row ng-untouched ng-dirty ng-invalid"
            container=""
            ngmodelgroup="individual"
            pdk-margin-bottom="3"
            pdk-padding-left="3"
          >
            <pdk-form-field
              labeltype="small"
            >
              <pdk-form-group
                class="pdk-form-group"
              >
                <fieldset
                  class="govuk-fieldset"
                  pdk-fieldset=""
                >
                  <legend
                    class="govuk-fieldset__legend govuk-fieldset__legend--s"
                  >
                     MANUAL_CASE_DEFENDANT.GUARDIAN_TYPE 
                  </legend>
                  <pdk-radio-group
                    class="ng-untouched ng-pristine ng-valid"
                    data-role="other-type-input"
                    name="guardianType"
                  >
                    <div
                      class="govuk-radios govuk-radios--inline"
                    >
                      <pdk-radio-button
                        value="INDIVIDUAL"
                      >
                        <div
                          class="govuk-radios__item"
                        >
                          <input
                            class="govuk-radios__input"
                            id="pdk-radio-GENERATED_ID"
                            name="pdk-radio-group-GENERATED_ID"
                            type="radio"
                            value="INDIVIDUAL"
                          />
                          <label
                            class="govuk-radios__label govuk-label"
                            for="pdk-radio-GENERATED_ID"
                            pdk-label=""
                          >
                             APPLICANT_DETAILS.INDIVIDUAL 
                          </label>
                        </div>
                      </pdk-radio-button>
                      <pdk-radio-button
                        value="ORGANISATION"
                      >
                        <div
                          class="govuk-radios__item"
                        >
                          <input
                            class="govuk-radios__input"
                            id="pdk-radio-GENERATED_ID"
                            name="pdk-radio-group-GENERATED_ID"
                            type="radio"
                            value="ORGANISATION"
                          />
                          <label
                            class="govuk-radios__label govuk-label"
                            for="pdk-radio-GENERATED_ID"
                            pdk-label=""
                          >
                             APPLICANT_DETAILS.ORGANISATION 
                          </label>
                        </div>
                      </pdk-radio-button>
                    </div>
                  </pdk-radio-group>
                </fieldset>
              </pdk-form-group>
            </pdk-form-field>
            <div
              class="ng-untouched ng-dirty ng-invalid"
              ngmodelgroup="individual"
            >
              <div
                class="ng-untouched ng-dirty ng-invalid"
                ngmodelgroup="parentGuardianInformation"
              >
                <pdk-form-field
                  labeltype="small"
                >
                  <pdk-form-group
                    class="pdk-form-group"
                  >
                    <label
                      class="govuk-label govuk-label--s"
                      for="pdk-form-control-undefined-GENERATED_ID"
                    >
                       MANUAL_CASE_DEFENDANT.ORGANISATION_NAME 
                    </label>
                    <input
                      class="ng-untouched ng-pristine ng-valid govuk-input"
                      id="pdk-form-control-undefined-GENERATED_ID"
                      maxlength="35"
                      name="organisationName"
                      pdk-input=""
                      pdk-text-input=""
                      required=""
                      type="text"
                    />
                  </pdk-form-group>
                </pdk-form-field>
                <h2
                  class="bold govuk-!-margin-bottom-3 govuk-body-m"
                  pdk-margin-bottom="3"
                  pdk-typography="body-medium"
                >
                   MANUAL_CASE_DEFENDANT.GUARDIAN_ADDRESS 
                </h2>
                <p>
                  <a
                    class="govuk-link"
                    data-role="same-as-organisation-defendant"
                    href="javascript:void(0);"
                    pdk-link=""
                  >
                    MANUAL_CASE_DEFENDANT.SAME_AS_DEFENDANT
                  </a>
                </p>
                <pdk-form-field
                  class="govuk-!-margin-bottom-3"
                  labeltype="small"
                  pdk-margin-bottom="3"
                >
                  <pdk-form-group
                    class="pdk-form-group"
                  >
                    <fieldset
                      class="govuk-fieldset"
                      pdk-fieldset=""
                    >
                      <legend
                        class="govuk-fieldset__legend govuk-fieldset__legend--s"
                      >
                         MANUAL_CASE_DEFENDANT.ADDRESS 
                      </legend>
                      <input-address
                        class="ng-untouched ng-dirty ng-invalid"
                        data-role="address-input"
                        name="address"
                      >
                        <pdk-form-field>
                          <pdk-form-group
                            class="pdk-form-group"
                          >
                            <pdk-checkbox
                              class="govuk-!-margin-bottom-2 govuk-checkboxes ng-untouched ng-pristine ng-valid"
                              data-role="no-fixed-abode"
                              name="noFixedAbode"
                              pdk-margin-bottom="2"
                            >
                              <div
                                class="govuk-checkboxes__item"
                              >
                                <input
                                  class="govuk-checkboxes__input"
                                  id="pdk-checkbox-GENERATED_ID"
                                  name="noFixedAbode"
                                  type="checkbox"
                                  value="true"
                                />
                                <label
                                  class="govuk-label govuk-checkboxes__label"
                                  for="pdk-checkbox-GENERATED_ID"
                                >
                                   No fixed abode 
                                </label>
                              </div>
                            </pdk-checkbox>
                          </pdk-form-group>
                        </pdk-form-field>
                        <div
                          class="govuk-!-margin-bottom-6 ng-untouched ng-pristine ng-invalid"
                          pdk-margin-bottom="6"
                        >
                          <pdk-form-group
                            class="pdk-form-group"
                          >
                            <label
                              class="govuk-!-margin-top-6 govuk-label govuk-label--s"
                              for="address-control-undefined-GENERATED_ID-address1"
                              pdk-label="small"
                              pdk-margin-top="6"
                            >
                               Address line 1 
                            </label>
                            <input
                              class="form-control govuk-input ng-untouched ng-pristine ng-valid"
                              id="address-control-undefined-GENERATED_ID-address1"
                              maxlength="35"
                              name="address1"
                              pdk-input=""
                              pdk-text-input=""
                              required=""
                              type="text"
                            />
                          </pdk-form-group>
                          <pdk-form-group
                            class="pdk-form-group"
                          >
                            <label
                              class="govuk-!-margin-top-6 govuk-label govuk-label--s"
                              for="address-control-undefined-GENERATED_ID-address2"
                              pdk-label="small"
                              pdk-margin-top="6"
                            >
                               Address line 2 (optional) 
                            </label>
                            <input
                              class="form-control govuk-input ng-untouched ng-pristine ng-invalid"
                              id="address-control-undefined-GENERATED_ID-address2"
                              maxlength="35"
                              name="address2"
                              pdk-input=""
                              pdk-text-input=""
                              required=""
                              type="text"
                            />
                          </pdk-form-group>
                          <pdk-form-group
                            class="pdk-form-group"
                          >
                            <label
                              class="govuk-!-margin-top-6 govuk-label govuk-label--s"
                              for="address-control-undefined-GENERATED_ID-address3"
                              pdk-label="small"
                              pdk-margin-top="6"
                            >
                               Address line 3 (optional) 
                            </label>
                            <input
                              class="form-control govuk-input ng-untouched ng-pristine ng-invalid"
                              id="address-control-undefined-GENERATED_ID-address3"
                              maxlength="35"
                              name="address3"
                              pdk-input=""
                              pdk-text-input=""
                              required=""
                              type="text"
                            />
                          </pdk-form-group>
                          <pdk-form-group
                            class="pdk-form-group"
                          >
                            <label
                              class="govuk-!-margin-top-6 govuk-label govuk-label--s"
                              for="address-control-undefined-GENERATED_ID-address4"
                              pdk-label="small"
                              pdk-margin-top="6"
                            >
                               Address line 4 (optional) 
                            </label>
                            <input
                              class="form-control govuk-input ng-untouched ng-pristine ng-invalid"
                              id="address-control-undefined-GENERATED_ID-address4"
                              maxlength="35"
                              name="address4"
                              pdk-input=""
                              pdk-text-input=""
                              required=""
                              type="text"
                            />
                          </pdk-form-group>
                          <pdk-form-group
                            class="pdk-form-group"
                          >
                            <label
                              class="govuk-!-margin-top-6 govuk-label govuk-label--s"
                              for="address-control-undefined-GENERATED_ID-address5"
                              pdk-label="small"
                              pdk-margin-top="6"
                            >
                               Address line 5 (optional) 
                            </label>
                            <input
                              class="form-control govuk-input ng-untouched ng-pristine ng-invalid"
                              id="address-control-undefined-GENERATED_ID-address5"
                              maxlength="35"
                              name="address5"
                              pdk-input=""
                              pdk-text-input=""
                              required=""
                              type="text"
                            />
                          </pdk-form-group>
                          <pdk-form-group
                            class="pdk-form-group"
                          >
                            <label
                              class="govuk-!-margin-top-6 govuk-label govuk-label--s"
                              for="address-control-undefined-GENERATED_ID-postcode"
                              pdk-label="small"
                              pdk-margin-top="6"
                            >
                               Postcode 
                            </label>
                            <input
                              class="form-control govuk-input ng-untouched ng-pristine ng-invalid"
                              id="address-control-undefined-GENERATED_ID-postcode"
                              maxlength="8"
                              name="postcode"
                              pdk-input=""
                              pdk-text-input=""
                              required=""
                              type="text"
                            />
                          </pdk-form-group>
                        </div>
                      </input-address>
                    </fieldset>
                  </pdk-form-group>
                </pdk-form-field>
                <h2
                  class="bold govuk-!-margin-bottom-3 govuk-body-m"
                  pdk-margin-bottom="3"
                  pdk-typography="body-medium"
                >
                   MANUAL_CASE_DEFENDANT.GUARDIAN_CONTACT_DETAILS 
                </h2>
                <pdk-form-field>
                  <pdk-form-group
                    class="pdk-form-group"
                  >
                    <label
                      class="govuk-label"
                      for="pdk-form-control-undefined-GENERATED_ID"
                    >
                       MANUAL_CASE_DEFENDANT.PHONE 
                    </label>
                    <input
                      class="ng-untouched ng-pristine ng-valid govuk-input"
                      id="pdk-form-control-undefined-GENERATED_ID"
                      maxlength="20"
                      name="companyTelephoneNumber"
                      pdk-input=""
                      pdk-text-input=""
                      type="tel"
                      validatephone=""
                    />
                  </pdk-form-group>
                </pdk-form-field>
              </div>
            </div>
            <p>
              <a
                class="govuk-link"
                data-role="remove-guardian-link"
                href="javascript:void(0);"
                pdk-link=""
              >
                MANUAL_CASE_DEFENDANT.GUARDIAN_REMOVE_LINK
              </a>
            </p>
          </pdk-grid>
        </div>
      </pdk-inset-text>
    </individual-defendant-guardian>
  </form>
</individual-defendant-guardian-test>
`;

exports[`Individual Defendant Guardian Component should not render noFixedAbode checkbox when case type is Summons and company is a guardian 1`] = `
<individual-defendant-guardian-test
  manualCaseDefendant={[Function Object]}
  manualCaseType={[Function String]}
>
  <form
    class="ng-untouched ng-pristine ng-valid"
    novalidate=""
    pdk-form=""
  >
    <individual-defendant-guardian>
      <div
        class="govuk-!-margin-top-3 govuk-!-margin-bottom-3"
        pdk-margin-bottom="3"
        pdk-margin-top="3"
      >
        <a
          class="govuk-link"
          href="javascript:void(0);"
          pdk-link=""
        >
          MANUAL_CASE_DEFENDANT.GUARDIAN_PANEL
        </a>
      </div>
      <pdk-inset-text
        class="pl-m"
        size="narrow"
      >
        <div
          class="govuk-inset-text"
        >
          <pdk-grid
            class="govuk-!-margin-bottom-3 govuk-!-padding-left-3 govuk-grid-row"
            container=""
            ngmodelgroup="individual"
            pdk-margin-bottom="3"
            pdk-padding-left="3"
          >
            <pdk-form-field
              labeltype="small"
            >
              <pdk-form-group
                class="pdk-form-group"
              >
                <fieldset
                  class="govuk-fieldset"
                  pdk-fieldset=""
                >
                  <legend
                    class="govuk-fieldset__legend govuk-fieldset__legend--s"
                  >
                     MANUAL_CASE_DEFENDANT.GUARDIAN_TYPE 
                  </legend>
                  <pdk-radio-group
                    class="ng-untouched ng-pristine ng-valid"
                    data-role="other-type-input"
                    name="guardianType"
                  >
                    <div
                      class="govuk-radios govuk-radios--inline"
                    >
                      <pdk-radio-button
                        value="INDIVIDUAL"
                      >
                        <div
                          class="govuk-radios__item"
                        >
                          <input
                            class="govuk-radios__input"
                            id="pdk-radio-GENERATED_ID"
                            name="pdk-radio-group-GENERATED_ID"
                            type="radio"
                            value="INDIVIDUAL"
                          />
                          <label
                            class="govuk-radios__label govuk-label"
                            for="pdk-radio-GENERATED_ID"
                            pdk-label=""
                          >
                             APPLICANT_DETAILS.INDIVIDUAL 
                          </label>
                        </div>
                      </pdk-radio-button>
                      <pdk-radio-button
                        value="ORGANISATION"
                      >
                        <div
                          class="govuk-radios__item"
                        >
                          <input
                            class="govuk-radios__input"
                            id="pdk-radio-GENERATED_ID"
                            name="pdk-radio-group-GENERATED_ID"
                            type="radio"
                            value="ORGANISATION"
                          />
                          <label
                            class="govuk-radios__label govuk-label"
                            for="pdk-radio-GENERATED_ID"
                            pdk-label=""
                          >
                             APPLICANT_DETAILS.ORGANISATION 
                          </label>
                        </div>
                      </pdk-radio-button>
                    </div>
                  </pdk-radio-group>
                </fieldset>
              </pdk-form-group>
            </pdk-form-field>
            <div
              ngmodelgroup="individual"
            >
              <div
                ngmodelgroup="parentGuardianInformation"
              >
                <pdk-form-field
                  labeltype="small"
                >
                  <pdk-form-group
                    class="pdk-form-group"
                  >
                    <label
                      class="govuk-label govuk-label--s"
                      for="pdk-form-control-undefined-GENERATED_ID"
                    >
                       MANUAL_CASE_DEFENDANT.ORGANISATION_NAME 
                    </label>
                    <input
                      class="ng-untouched ng-pristine ng-valid govuk-input"
                      id="pdk-form-control-undefined-GENERATED_ID"
                      maxlength="35"
                      name="organisationName"
                      pdk-input=""
                      pdk-text-input=""
                      required=""
                      type="text"
                    />
                  </pdk-form-group>
                </pdk-form-field>
                <h2
                  class="bold govuk-!-margin-bottom-3 govuk-body-m"
                  pdk-margin-bottom="3"
                  pdk-typography="body-medium"
                >
                   MANUAL_CASE_DEFENDANT.GUARDIAN_ADDRESS 
                </h2>
                <p>
                  <a
                    class="govuk-link"
                    data-role="same-as-organisation-defendant"
                    href="javascript:void(0);"
                    pdk-link=""
                  >
                    MANUAL_CASE_DEFENDANT.SAME_AS_DEFENDANT
                  </a>
                </p>
                <pdk-form-field
                  class="govuk-!-margin-bottom-3"
                  labeltype="small"
                  pdk-margin-bottom="3"
                >
                  <pdk-form-group
                    class="pdk-form-group"
                  >
                    <fieldset
                      class="govuk-fieldset"
                      pdk-fieldset=""
                    >
                      <legend
                        class="govuk-fieldset__legend govuk-fieldset__legend--s"
                      >
                         MANUAL_CASE_DEFENDANT.ADDRESS 
                      </legend>
                      <input-address
                        class="ng-untouched ng-pristine ng-valid"
                        data-role="address-input"
                        name="address"
                      >
                        <div
                          class="govuk-!-margin-bottom-6 ng-untouched ng-pristine ng-invalid"
                          pdk-margin-bottom="6"
                        >
                          <pdk-form-group
                            class="pdk-form-group"
                          >
                            <label
                              class="govuk-!-margin-top-6 govuk-label govuk-label--s"
                              for="address-control-undefined-GENERATED_ID-address1"
                              pdk-label="small"
                              pdk-margin-top="6"
                            >
                               Address line 1 
                            </label>
                            <input
                              class="form-control govuk-input ng-untouched ng-pristine ng-invalid"
                              id="address-control-undefined-GENERATED_ID-address1"
                              maxlength="35"
                              name="address1"
                              pdk-input=""
                              pdk-text-input=""
                              required=""
                              type="text"
                            />
                          </pdk-form-group>
                          <pdk-form-group
                            class="pdk-form-group"
                          >
                            <label
                              class="govuk-!-margin-top-6 govuk-label govuk-label--s"
                              for="address-control-undefined-GENERATED_ID-address2"
                              pdk-label="small"
                              pdk-margin-top="6"
                            >
                               Address line 2 (optional) 
                            </label>
                            <input
                              class="form-control govuk-input ng-untouched ng-pristine ng-invalid"
                              id="address-control-undefined-GENERATED_ID-address2"
                              maxlength="35"
                              name="address2"
                              pdk-input=""
                              pdk-text-input=""
                              required=""
                              type="text"
                            />
                          </pdk-form-group>
                          <pdk-form-group
                            class="pdk-form-group"
                          >
                            <label
                              class="govuk-!-margin-top-6 govuk-label govuk-label--s"
                              for="address-control-undefined-GENERATED_ID-address3"
                              pdk-label="small"
                              pdk-margin-top="6"
                            >
                               Address line 3 (optional) 
                            </label>
                            <input
                              class="form-control govuk-input ng-untouched ng-pristine ng-invalid"
                              id="address-control-undefined-GENERATED_ID-address3"
                              maxlength="35"
                              name="address3"
                              pdk-input=""
                              pdk-text-input=""
                              required=""
                              type="text"
                            />
                          </pdk-form-group>
                          <pdk-form-group
                            class="pdk-form-group"
                          >
                            <label
                              class="govuk-!-margin-top-6 govuk-label govuk-label--s"
                              for="address-control-undefined-GENERATED_ID-address4"
                              pdk-label="small"
                              pdk-margin-top="6"
                            >
                               Address line 4 (optional) 
                            </label>
                            <input
                              class="form-control govuk-input ng-untouched ng-pristine ng-invalid"
                              id="address-control-undefined-GENERATED_ID-address4"
                              maxlength="35"
                              name="address4"
                              pdk-input=""
                              pdk-text-input=""
                              required=""
                              type="text"
                            />
                          </pdk-form-group>
                          <pdk-form-group
                            class="pdk-form-group"
                          >
                            <label
                              class="govuk-!-margin-top-6 govuk-label govuk-label--s"
                              for="address-control-undefined-GENERATED_ID-address5"
                              pdk-label="small"
                              pdk-margin-top="6"
                            >
                               Address line 5 (optional) 
                            </label>
                            <input
                              class="form-control govuk-input ng-untouched ng-pristine ng-invalid"
                              id="address-control-undefined-GENERATED_ID-address5"
                              maxlength="35"
                              name="address5"
                              pdk-input=""
                              pdk-text-input=""
                              required=""
                              type="text"
                            />
                          </pdk-form-group>
                          <pdk-form-group
                            class="pdk-form-group"
                          >
                            <label
                              class="govuk-!-margin-top-6 govuk-label govuk-label--s"
                              for="address-control-undefined-GENERATED_ID-postcode"
                              pdk-label="small"
                              pdk-margin-top="6"
                            >
                               Postcode 
                            </label>
                            <input
                              class="form-control govuk-input ng-untouched ng-pristine ng-invalid"
                              id="address-control-undefined-GENERATED_ID-postcode"
                              maxlength="8"
                              name="postcode"
                              pdk-input=""
                              pdk-text-input=""
                              required=""
                              type="text"
                            />
                          </pdk-form-group>
                        </div>
                      </input-address>
                    </fieldset>
                  </pdk-form-group>
                </pdk-form-field>
                <h2
                  class="bold govuk-!-margin-bottom-3 govuk-body-m"
                  pdk-margin-bottom="3"
                  pdk-typography="body-medium"
                >
                   MANUAL_CASE_DEFENDANT.GUARDIAN_CONTACT_DETAILS 
                </h2>
                <pdk-form-field>
                  <pdk-form-group
                    class="pdk-form-group"
                  >
                    <label
                      class="govuk-label"
                      for="pdk-form-control-undefined-GENERATED_ID"
                    >
                       MANUAL_CASE_DEFENDANT.PHONE 
                    </label>
                    <input
                      class="ng-untouched ng-pristine ng-valid govuk-input"
                      id="pdk-form-control-undefined-GENERATED_ID"
                      maxlength="20"
                      name="companyTelephoneNumber"
                      pdk-input=""
                      pdk-text-input=""
                      type="tel"
                      validatephone=""
                    />
                  </pdk-form-group>
                </pdk-form-field>
              </div>
            </div>
            <p>
              <a
                class="govuk-link"
                data-role="remove-guardian-link"
                href="javascript:void(0);"
                pdk-link=""
              >
                MANUAL_CASE_DEFENDANT.GUARDIAN_REMOVE_LINK
              </a>
            </p>
          </pdk-grid>
        </div>
      </pdk-inset-text>
    </individual-defendant-guardian>
  </form>
</individual-defendant-guardian-test>
`;

exports[`Individual Defendant Guardian Component should not render noFixedAbode checkbox when case type is Summons and individual is a guardian 1`] = `
<individual-defendant-guardian-test
  manualCaseDefendant={[Function Object]}
  manualCaseType={[Function String]}
>
  <form
    class="ng-untouched ng-pristine ng-valid"
    novalidate=""
    pdk-form=""
  >
    <individual-defendant-guardian>
      <div
        class="govuk-!-margin-top-3 govuk-!-margin-bottom-3"
        pdk-margin-bottom="3"
        pdk-margin-top="3"
      >
        <a
          class="govuk-link"
          href="javascript:void(0);"
          pdk-link=""
        >
          MANUAL_CASE_DEFENDANT.GUARDIAN_PANEL
        </a>
      </div>
    </individual-defendant-guardian>
  </form>
</individual-defendant-guardian-test>
`;

exports[`Individual Defendant Guardian Component should render the defendant form correctly when individual is a guardian 1`] = `
<individual-defendant-guardian-test
  manualCaseDefendant={[Function Object]}
  manualCaseType={[Function String]}
>
  <form
    class="ng-untouched ng-pristine ng-valid"
    novalidate=""
    pdk-form=""
  >
    <individual-defendant-guardian>
      <div
        class="govuk-!-margin-top-3 govuk-!-margin-bottom-3"
        pdk-margin-bottom="3"
        pdk-margin-top="3"
      >
        <a
          class="govuk-link"
          href="javascript:void(0);"
          pdk-link=""
        >
          MANUAL_CASE_DEFENDANT.GUARDIAN_PANEL
        </a>
      </div>
      <pdk-inset-text
        class="pl-m"
        size="narrow"
      >
        <div
          class="govuk-inset-text"
        >
          <pdk-grid
            class="govuk-!-margin-bottom-3 govuk-!-padding-left-3 govuk-grid-row"
            container=""
            ngmodelgroup="individual"
            pdk-margin-bottom="3"
            pdk-padding-left="3"
          >
            <pdk-form-field
              labeltype="small"
            >
              <pdk-form-group
                class="pdk-form-group"
              >
                <fieldset
                  class="govuk-fieldset"
                  pdk-fieldset=""
                >
                  <legend
                    class="govuk-fieldset__legend govuk-fieldset__legend--s"
                  >
                     MANUAL_CASE_DEFENDANT.GUARDIAN_TYPE 
                  </legend>
                  <pdk-radio-group
                    class="ng-untouched ng-pristine ng-valid"
                    data-role="other-type-input"
                    name="guardianType"
                  >
                    <div
                      class="govuk-radios govuk-radios--inline"
                    >
                      <pdk-radio-button
                        value="INDIVIDUAL"
                      >
                        <div
                          class="govuk-radios__item"
                        >
                          <input
                            class="govuk-radios__input"
                            id="pdk-radio-GENERATED_ID"
                            name="pdk-radio-group-GENERATED_ID"
                            type="radio"
                            value="INDIVIDUAL"
                          />
                          <label
                            class="govuk-radios__label govuk-label"
                            for="pdk-radio-GENERATED_ID"
                            pdk-label=""
                          >
                             APPLICANT_DETAILS.INDIVIDUAL 
                          </label>
                        </div>
                      </pdk-radio-button>
                      <pdk-radio-button
                        value="ORGANISATION"
                      >
                        <div
                          class="govuk-radios__item"
                        >
                          <input
                            class="govuk-radios__input"
                            id="pdk-radio-GENERATED_ID"
                            name="pdk-radio-group-GENERATED_ID"
                            type="radio"
                            value="ORGANISATION"
                          />
                          <label
                            class="govuk-radios__label govuk-label"
                            for="pdk-radio-GENERATED_ID"
                            pdk-label=""
                          >
                             APPLICANT_DETAILS.ORGANISATION 
                          </label>
                        </div>
                      </pdk-radio-button>
                    </div>
                  </pdk-radio-group>
                </fieldset>
              </pdk-form-group>
            </pdk-form-field>
            <div
              ngmodelgroup="individual"
            >
              <div
                ngmodelgroup="parentGuardianInformation"
              >
                <div
                  ngmodelgroup="personalInformation"
                >
                  <pdk-form-field
                    labeltype="small"
                  >
                    <pdk-form-group
                      class="pdk-form-group"
                    >
                      <label
                        class="govuk-label govuk-label--s"
                        for="pdk-form-control-undefined-GENERATED_ID"
                      >
                         MANUAL_CASE_DEFENDANT.TITLE 
                      </label>
                      <input
                        class="ng-untouched ng-pristine ng-valid govuk-input"
                        id="pdk-form-control-undefined-GENERATED_ID"
                        maxlength="35"
                        name="title"
                        pdk-input=""
                        pdk-text-input=""
                        required=""
                        type="text"
                      />
                    </pdk-form-group>
                  </pdk-form-field>
                  <pdk-form-field
                    labeltype="small"
                  >
                    <pdk-form-group
                      class="pdk-form-group"
                    >
                      <label
                        class="govuk-label govuk-label--s"
                        for="pdk-form-control-undefined-GENERATED_ID"
                      >
                         MANUAL_CASE_DEFENDANT.FORENAME 
                      </label>
                      <input
                        class="ng-untouched ng-pristine ng-valid govuk-input"
                        data-role="forename-input"
                        id="pdk-form-control-undefined-GENERATED_ID"
                        maxlength="35"
                        name="firstName"
                        pdk-input=""
                        pdk-text-input=""
                        required=""
                        type="text"
                      />
                    </pdk-form-group>
                  </pdk-form-field>
                  <pdk-form-field
                    labeltype="small"
                  >
                    <pdk-form-group
                      class="pdk-form-group"
                    >
                      <label
                        class="govuk-label govuk-label--s"
                        for="pdk-form-control-undefined-GENERATED_ID"
                      >
                         MANUAL_CASE_DEFENDANT.MIDDLENAME 
                      </label>
                      <input
                        class="ng-untouched ng-pristine ng-valid govuk-input"
                        data-role="middlename-input"
                        id="pdk-form-control-undefined-GENERATED_ID"
                        maxlength="35"
                        name="givenName2"
                        pdk-input=""
                        pdk-text-input=""
                        type="text"
                      />
                    </pdk-form-group>
                  </pdk-form-field>
                  <pdk-form-field
                    labeltype="small"
                  >
                    <pdk-form-group
                      class="pdk-form-group"
                    >
                      <label
                        class="govuk-label govuk-label--s"
                        for="pdk-form-control-undefined-GENERATED_ID"
                      >
                         MANUAL_CASE_DEFENDANT.SURNAME 
                      </label>
                      <input
                        class="ng-untouched ng-pristine ng-valid govuk-input"
                        data-role="surname-input"
                        id="pdk-form-control-undefined-GENERATED_ID"
                        maxlength="35"
                        name="lastName"
                        pdk-input=""
                        pdk-text-input=""
                        required=""
                        type="text"
                      />
                    </pdk-form-group>
                  </pdk-form-field>
                  <h2
                    class="bold govuk-!-margin-bottom-3 govuk-body-m"
                    pdk-margin-bottom="3"
                    pdk-typography="body-medium"
                  >
                     MANUAL_CASE_DEFENDANT.GUARDIAN_ADDRESS 
                  </h2>
                  <p>
                    <a
                      class="govuk-link"
                      data-role="same-as-individual-defendant"
                      href="javascript:void(0);"
                      pdk-link=""
                    >
                      MANUAL_CASE_DEFENDANT.SAME_AS_DEFENDANT
                    </a>
                  </p>
                  <pdk-form-field
                    class="govuk-!-margin-bottom-3"
                    labeltype="small"
                    pdk-margin-bottom="3"
                  >
                    <pdk-form-group
                      class="pdk-form-group"
                    >
                      <fieldset
                        class="govuk-fieldset"
                        pdk-fieldset=""
                      >
                        <legend
                          class="govuk-fieldset__legend govuk-fieldset__legend--s"
                        >
                           MANUAL_CASE_DEFENDANT.ADDRESS 
                        </legend>
                        <input-address
                          class="ng-untouched ng-pristine ng-valid"
                          data-role="address-input"
                          name="address"
                        >
                          <pdk-form-field>
                            <pdk-form-group
                              class="pdk-form-group"
                            >
                              <pdk-checkbox
                                class="govuk-!-margin-bottom-2 govuk-checkboxes ng-untouched ng-pristine ng-valid"
                                data-role="no-fixed-abode"
                                name="noFixedAbode"
                                pdk-margin-bottom="2"
                              >
                                <div
                                  class="govuk-checkboxes__item"
                                >
                                  <input
                                    class="govuk-checkboxes__input"
                                    id="pdk-checkbox-GENERATED_ID"
                                    name="noFixedAbode"
                                    type="checkbox"
                                    value="true"
                                  />
                                  <label
                                    class="govuk-label govuk-checkboxes__label"
                                    for="pdk-checkbox-GENERATED_ID"
                                  >
                                     No fixed abode 
                                  </label>
                                </div>
                              </pdk-checkbox>
                            </pdk-form-group>
                          </pdk-form-field>
                          <div
                            class="govuk-!-margin-bottom-6 ng-untouched ng-pristine ng-invalid"
                            pdk-margin-bottom="6"
                          >
                            <pdk-form-group
                              class="pdk-form-group"
                            >
                              <label
                                class="govuk-!-margin-top-6 govuk-label govuk-label--s"
                                for="address-control-undefined-GENERATED_ID-address1"
                                pdk-label="small"
                                pdk-margin-top="6"
                              >
                                 Address line 1 
                              </label>
                              <input
                                class="form-control govuk-input ng-untouched ng-pristine ng-invalid"
                                id="address-control-undefined-GENERATED_ID-address1"
                                maxlength="35"
                                name="address1"
                                pdk-input=""
                                pdk-text-input=""
                                required=""
                                type="text"
                              />
                            </pdk-form-group>
                            <pdk-form-group
                              class="pdk-form-group"
                            >
                              <label
                                class="govuk-!-margin-top-6 govuk-label govuk-label--s"
                                for="address-control-undefined-GENERATED_ID-address2"
                                pdk-label="small"
                                pdk-margin-top="6"
                              >
                                 Address line 2 (optional) 
                              </label>
                              <input
                                class="form-control govuk-input ng-untouched ng-pristine ng-invalid"
                                id="address-control-undefined-GENERATED_ID-address2"
                                maxlength="35"
                                name="address2"
                                pdk-input=""
                                pdk-text-input=""
                                required=""
                                type="text"
                              />
                            </pdk-form-group>
                            <pdk-form-group
                              class="pdk-form-group"
                            >
                              <label
                                class="govuk-!-margin-top-6 govuk-label govuk-label--s"
                                for="address-control-undefined-GENERATED_ID-address3"
                                pdk-label="small"
                                pdk-margin-top="6"
                              >
                                 Address line 3 (optional) 
                              </label>
                              <input
                                class="form-control govuk-input ng-untouched ng-pristine ng-invalid"
                                id="address-control-undefined-GENERATED_ID-address3"
                                maxlength="35"
                                name="address3"
                                pdk-input=""
                                pdk-text-input=""
                                required=""
                                type="text"
                              />
                            </pdk-form-group>
                            <pdk-form-group
                              class="pdk-form-group"
                            >
                              <label
                                class="govuk-!-margin-top-6 govuk-label govuk-label--s"
                                for="address-control-undefined-GENERATED_ID-address4"
                                pdk-label="small"
                                pdk-margin-top="6"
                              >
                                 Address line 4 (optional) 
                              </label>
                              <input
                                class="form-control govuk-input ng-untouched ng-pristine ng-invalid"
                                id="address-control-undefined-GENERATED_ID-address4"
                                maxlength="35"
                                name="address4"
                                pdk-input=""
                                pdk-text-input=""
                                required=""
                                type="text"
                              />
                            </pdk-form-group>
                            <pdk-form-group
                              class="pdk-form-group"
                            >
                              <label
                                class="govuk-!-margin-top-6 govuk-label govuk-label--s"
                                for="address-control-undefined-GENERATED_ID-address5"
                                pdk-label="small"
                                pdk-margin-top="6"
                              >
                                 Address line 5 (optional) 
                              </label>
                              <input
                                class="form-control govuk-input ng-untouched ng-pristine ng-invalid"
                                id="address-control-undefined-GENERATED_ID-address5"
                                maxlength="35"
                                name="address5"
                                pdk-input=""
                                pdk-text-input=""
                                required=""
                                type="text"
                              />
                            </pdk-form-group>
                            <pdk-form-group
                              class="pdk-form-group"
                            >
                              <label
                                class="govuk-!-margin-top-6 govuk-label govuk-label--s"
                                for="address-control-undefined-GENERATED_ID-postcode"
                                pdk-label="small"
                                pdk-margin-top="6"
                              >
                                 Postcode 
                              </label>
                              <input
                                class="form-control govuk-input ng-untouched ng-pristine ng-invalid"
                                id="address-control-undefined-GENERATED_ID-postcode"
                                maxlength="8"
                                name="postcode"
                                pdk-input=""
                                pdk-text-input=""
                                required=""
                                type="text"
                              />
                            </pdk-form-group>
                          </div>
                        </input-address>
                      </fieldset>
                    </pdk-form-group>
                  </pdk-form-field>
                  <h2
                    class="bold govuk-!-margin-bottom-3 govuk-body-m"
                    pdk-margin-bottom="3"
                    pdk-typography="body-medium"
                  >
                     MANUAL_CASE_DEFENDANT.GUARDIAN_CONTACT_DETAILS 
                  </h2>
                  <div
                    ngmodelgroup="contactDetails"
                  >
                    <pdk-form-field>
                      <pdk-form-group
                        class="pdk-form-group"
                      >
                        <label
                          class="govuk-label"
                          for="pdk-form-control-undefined-GENERATED_ID"
                        >
                           MANUAL_CASE_DEFENDANT.EMAIL 
                        </label>
                        <input
                          class="ng-untouched ng-pristine ng-valid govuk-input"
                          id="pdk-form-control-undefined-GENERATED_ID"
                          maxlength="255"
                          name="primaryEmail"
                          pdk-input=""
                          pdk-text-input=""
                          type="email"
                          validateemail=""
                        />
                      </pdk-form-group>
                    </pdk-form-field>
                    <pdk-form-field>
                      <pdk-form-group
                        class="pdk-form-group"
                      >
                        <label
                          class="govuk-label"
                          for="pdk-form-control-undefined-GENERATED_ID"
                        >
                           MANUAL_CASE_DEFENDANT.PHONE 
                        </label>
                        <input
                          class="ng-untouched ng-pristine ng-valid govuk-input"
                          id="pdk-form-control-undefined-GENERATED_ID"
                          maxlength="20"
                          name="work"
                          pdk-input=""
                          pdk-text-input=""
                          type="tel"
                          validatephone=""
                        />
                      </pdk-form-group>
                    </pdk-form-field>
                  </div>
                </div>
              </div>
            </div>
            <p>
              <a
                class="govuk-link"
                data-role="remove-guardian-link"
                href="javascript:void(0);"
                pdk-link=""
              >
                MANUAL_CASE_DEFENDANT.GUARDIAN_REMOVE_LINK
              </a>
            </p>
          </pdk-grid>
        </div>
      </pdk-inset-text>
    </individual-defendant-guardian>
  </form>
</individual-defendant-guardian-test>
`;
